--- a/index.html
+++ b/index.html
@@ -7,23 +7,36 @@
   <style>
     html,body{height:100%;margin:0;background:#000;overflow:hidden;cursor:grab}
     canvas{display:block;width:100vw;height:100vh}
-    #controls{
-      position:fixed;top:10px;left:10px;z-index:10;
-      background:#111a;padding:8px 12px;border-radius:8px;
-      color:#fff;font-family:sans-serif;
+
+    #fullscreenBtn{
+      position:fixed;
+      bottom:15px;
+      right:15px;
+      z-index:10;
+      background:#111a;
+      border:none;
+      border-radius:50%;
+      width:44px;
+      height:44px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      cursor:pointer;
     }
-    button{
-      background:#333;color:#fff;border:none;
-      padding:6px 12px;border-radius:6px;cursor:pointer;
-    }
-    button:hover{background:#555}
+    #fullscreenBtn:hover{ background:#333a; }
+    #fullscreenBtn svg{ width:22px;height:22px;fill:#fff; }
   </style>
 </head>
 <body>
-  <div id="controls">
-    <button id="toggle">Mode: Spiral Spin</button>
-  </div>
   <canvas id="c"></canvas>
+
+  <!-- Fullscreen button -->
+  <button id="fullscreenBtn" title="Toggle Fullscreen">
+    <svg viewBox="0 0 24 24">
+      <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zm-3-12v2h3v3h2V5h-5z"/>
+    </svg>
+  </button>
+
 <script>
 (() => {
   const canvas = document.getElementById('c');
@@ -36,7 +49,8 @@
     arms: 3,
     cameraDistanceFactor: 1.6,
     armTightness: 6.2,
-    coreHeightFactor: 0.1 // <--- NEW: thinner vertical spread around core
+    coreHeightFactor: 0.1,
+    bgStarCount: 2000 // wallpaper stars
   };
 
   let CAMERA_DISTANCE = 1000;
@@ -73,8 +87,6 @@
 
       const baseX = Math.cos(theta) * t + (Math.random()-0.5) * spread;
       const baseY = Math.sin(theta) * t + (Math.random()-0.5) * spread * 0.6;
-
-      // thinner height near core
       const baseZ = (Math.random() - 0.5) * Math.max(60, W*0.08) * params.coreHeightFactor;
 
       let size, color;
@@ -94,15 +106,20 @@
         color = `rgba(${r},${g},${b},${alpha.toFixed(3)})`;
       }
 
-      stars.push({ angle: theta, radius: t, x: baseX, y: baseY, z: baseZ, size, color, arm });
+      stars.push({ 
+        angle: theta, radius: t, x: baseX, y: baseY, z: baseZ, 
+        size, color, arm, twinkle:false 
+      });
     }
+    // --- Background Wallpaper Stars ---
+    
 
-    // Background stars (filler)
+    // Background stars with twinkle
     const bgCount = Math.floor(params.starCount * 0.8);
     for(let i=0;i<bgCount;i++){
       const radius = Math.random() * R * 1.3;
       const angle = Math.random() * Math.PI * 2;
-      const z = (Math.random() - 0.5) * Math.max(120, W*0.15); // keep filler thick
+      const z = (Math.random() - 0.5) * Math.max(120, W*0.15);
 
       const size = 0.4 + Math.random() * 0.8;  
       const palette = [
@@ -112,11 +129,20 @@
         [200,220,255]
       ];
       const c = palette[Math.floor(Math.random()*palette.length)];
-      const alpha = 0.45 + Math.random() * 0.45;
-      const color = `rgba(${c[0]},${c[1]},${c[2]},${alpha.toFixed(3)})`;
+      const baseAlpha = 0.45 + Math.random() * 0.45;
 
-      stars.push({ angle, radius, x:0, y:0, z, size, color, arm:-1 });
+      // Each background star has a twinkle phase + speed
+      const twinklePhase = Math.random() * Math.PI*2;
+      const twinkleSpeed = 0.001 + Math.random() * 0.002;
+
+      stars.push({ 
+        angle, radius, x:0, y:0, z, size, 
+        color:[c[0],c[1],c[2]], 
+        baseAlpha, twinkle:true, 
+        twinklePhase, twinkleSpeed 
+      });
     }
+    
   }
 
   let camRotX = -1.200;
@@ -146,12 +172,14 @@
     camRotX = Math.max(-1.2, Math.min(1.2, camRotX));
   });
 
-  // Mode toggle
-  let mode = "spiral";
-  document.getElementById("toggle").addEventListener("click",()=>{
-    mode = (mode==="spiral"?"rigid":"spiral");
-    document.getElementById("toggle").textContent =
-      "Mode: " + (mode==="spiral" ? "Spiral Spin" : "Rigid Spin");
+  // --- Fullscreen button logic ---
+  const fsBtn = document.getElementById("fullscreenBtn");
+  fsBtn.addEventListener("click", () => {
+    if (!document.fullscreenElement) {
+      document.documentElement.requestFullscreen().catch(err => console.log(err));
+    } else {
+      document.exitFullscreen();
+    }
   });
 
   let last = performance.now();
@@ -169,11 +197,7 @@
     const cosY = Math.cos(camRotY), sinY = Math.sin(camRotY);
 
     for(const s of stars){
-      if(mode==="rigid"){
-        s.angle += params.spinSpeed * dt;  
-      } else {
-        s.angle += params.spinSpeed * dt * (0.5 + s.radius * 0.0005);
-      }
+      s.angle += params.spinSpeed * dt * (0.5 + s.radius * 0.0005);
 
       const x = Math.cos(s.angle) * s.radius;
       const y = Math.sin(s.angle) * s.radius;
@@ -191,8 +215,18 @@
       const sy = ry * proj;
       const screenR = Math.max(0.18, s.size * proj);
 
+      // Handle twinkle
+      let fillStyle;
+      if(s.twinkle){
+        const twinkle = 0.4 + 0.6 * Math.abs(Math.sin(s.twinklePhase + now * s.twinkleSpeed));
+        const alpha = Math.min(1, s.baseAlpha * twinkle);
+        fillStyle = `rgba(${s.color[0]},${s.color[1]},${s.color[2]},${alpha.toFixed(3)})`;
+      } else {
+        fillStyle = s.color;
+      }
+
       ctx.beginPath();
-      ctx.fillStyle = s.color;
+      ctx.fillStyle = fillStyle;
       ctx.arc(sx, sy, screenR, 0, Math.PI * 2);
       ctx.fill();
     }
