--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Galaxy Preview — Remote Storage Only</title>
+<title>Pocket Galaxy</title>
 <style>
   html,body{height:100%;margin:0;background:#000;overflow:hidden;cursor:grab}
   canvas{display:block;width:100vw;height:100vh}
@@ -117,7 +117,7 @@
   const REMOTE_TIMEOUT_MS = 6000;
   const params = {
     spinSpeed: 0.00018,
-    starCount: 1400,
+    starCount: 3400,
     arms: 3,
     cameraDistanceFactor: 1.6,
     armTightness: 6.2,
@@ -524,3 +524,4 @@
 </script>
 </body>
 </html>
+
